--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -5,6 +5,7 @@ section {
 .hero {
     display: flex;
     flex-direction: column;
+    box-shadow: 0 0 200px rgba(0,0,0,0.9) inset;
 }
 
 .photoGrid {
