--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 * {
-    overflow-x: hidden;
     box-sizing: border-box;
     font-family: Poppins, sans-serif;
+}
+
+.cardsContainer {
+    display: flex;
+    overflow-x: scroll;
+    background: #FC5C7D;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #6A82FB, #FC5C7D);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #6A82FB, #FC5C7D); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    box-shadow: 0 0 200px rgba(0,0,0,0.9) inset;
 }
