--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -6,10 +6,11 @@
     font-size: 12px;
     padding: 1rem;
     min-width: 400px;
+    position: relative;
 }
 
 .card > p {
-    color: black;
+    color: #f1f0f4;
 }
 
 .card--image {
@@ -60,4 +61,14 @@
 .card--price {
     display: flex;
     align-items: flex-end;
+}
+
+.card--badge {
+    position: absolute;
+    top: 3.2rem;
+    left: 3.7rem;
+    background-color: #f1f0f4;
+    padding: 5px 7px;
+    border-radius: 4px;
+    font-weight: bold;
 }
